--- a/package.json
+++ b/package.json
@@ -33,13 +33,18 @@
     ]
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "bootstrap": "^5.2.1",
+    "css-loader": "^6.7.1",
+    "lodash": "^4.17.21",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.4",
     "@types/lodash": "^4.14.184",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
+    "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.2",
